# stable-diffusion-k8s

./: .gitignore  .gitlab-ci.yml  README.md  destroy_docker_containers.sh  docker_login.sh  infrastructure_considerations.md  kubernetes.yaml
.gitlab/agents/eks-agent/: config.yaml
infrastructure/: .terraform.lock.hcl  variables.tf  vpc.tf
src/endpoint/endpoint/: Dockerfile  api.py  logger.py  predict.py
src/upload_model/: pyproject.toml
