[tool.poetry]
name = "upload_model"
version = "0.1.0"
description = ""
authors = ["Duncan Haywood"]
license = "Prop"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.7.0"
python-json-logger = "^2.0.4"
boto3 = "^1.26.37"
diffusers = "^0.11.1"
torch = "^1.13.1"
transformers = "^4.25.1"
pytest = "^7.2.0"
accelerate = "^0.15.0"
awscli = "^1.27.37"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
